# vf-qmllibs

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
advancednetworkmanger_lib/: CMakeLists.txt  anmlib.qrc  connectiondatamodel.cpp  connectiondatamodel.h
advancednetworkmanger_lib/src/: abstractconnectionsettingsinterface.cpp  abstractconnectionsettingsinterface.h  activenetworks.cpp  activenetworks.h  advancednetworkmanager.cpp  advancednetworkmanager.h  bluetoothnetworks.h  connectiontreeinterface.cpp  connectiontreeinterface.h  devicemanager.h  ethernetnetworks.h  globalDefines.h  networkmanagerabstraction.cpp  networkmanagerabstraction.h  storednetworks.cpp  storednetworks.h  vpnnetworks.h  wifinetworks.cpp  wifinetworks.h  wiredconnectionsettingsinterface.cpp  wiredconnectionsettingsinterface.h  wirelessconnectionsettingsinterface.cpp  wirelessconnectionsettingsinterface.h
advancednetworkmanger_lib/src/ConnectionTree/: connectionlist.cpp  connectionlist.h  connectionmodel.cpp  connectionmodel.h  connectiontreeinterface.cpp  connectiontreeinterface.h
advancednetworkmanger_lib/src/ConnectionTypes/: abstractnetwork.cpp  abstractnetwork.h  bluetoothnetworks.cpp  bluetoothnetworks.h  ethernetnetworks.cpp  ethernetnetworks.h  vpnnetworks.cpp  vpnnetworks.h  wifinetworks.cpp  wifinetworks.h
advancednetworkmanger_lib/src/PropertieInterfaces/: abstractconnectionsettingsinterface.cpp  abstractconnectionsettingsinterface.h  wiredconnectionsettingsinterface.cpp  wiredconnectionsettingsinterface.h  wirelessconnectionsettingsinterface.cpp  wirelessconnectionsettingsinterface.h
advancednetworkmanger_lib/src/cppNotificationHandler/: nmcppnotification.h
advancednetworkmanger_lib/src/devices/: devicemanager.cpp  devicemanager.h
advancednetworkmanger_lib/src/info/: infointerface.cpp
advancednetworkmanger_lib/src/qml/: ConnectionQuickView.qml  ConnectionRowAdvanced.qml  ConnectionTree.qml  NetworkManager.qml  PasswordDialog.qml  SignalIcon.qml  Tree.qml
advancednetworkmanger_lib/src/qml/ethernet/: EthernetTab.qml
advancednetworkmanger_lib/src/qml/settings/: AvailableApDialog.qml  EthernetSettings.qml  WifiSettings.qml
advancednetworkmanger_lib/src/qml/tree/: ConnectionInfo.qml  ConnectionRowAdvanced.qml  ConnectionTree.qml  (+3 more)
libs/: libs.cmake
libs/notificationmanager/: CMakeLists.txt  notificationmanager.qrc
libs/notificationmanager/src/qml/: Notification.qml
libs/notificationmanager/src/qml/notificationmanager/: qmldir
libs/uivectorgraphics_lib/: uivlibConfig.cmake.in
libs/uivectorgraphics_lib/src/: uivectorgraphics.h
libs/zeraFa/: CMakeLists.txt  zerafa.qrc  zerafaConfig.cmake.in
libs/zeraFa/src/: zerafa.cpp  zerafa.h
libs/zeraGlobalConfig/: CMakeLists.txt  globalconfig.qrc  globalconfigConfig.cmake.in
libs/zeraGlobalConfig/src/: globalconfigplugin.cpp  globalconfigplugin.h
libs/zeraHelpers/: CMakeLists.txt  qmlhelpers.qrc  qmlhelpersConfig.cmake.in
libs/zeraHelpers/src/: helpersplugin.cpp  helpersplugin.h
libs/zeraQwtChart/: CMakeLists.txt  qwtchartsConfig.cmake.in
libs/zeraQwtChart/src/: qwtcharts.cpp  qwtcharts.h
libs/zeraTranslation/: CMakeLists.txt  lupdate.pro  zeratranslation.qrc  zeratranslationConfig.cmake.in
libs/zeraTranslation/src/: zeratranslation.cpp  zeratranslation.h  zeratranslationplugin.cpp  zeratranslationplugin.h
libs/zeraTranslation/src/qml/: TranslationHelper.qml
libs/zeracomponents_lib/: CMakeLists.txt  Test.qml  TestComp.qml  zeracomponents.qrc  zeracomponentsConfig.cmake.in
libs/zeracomponents_lib/src/: zeracomponents.cpp  zeracomponents.h
libs/zeracomponents_lib/src/qml/: ZButton.qml  ZComboBox.qml  ZDoubleValidator.qml  ZLineEdit.qml  ZSpinBox.qml  ZUnitComboBox.qml  ZVisualComboBox.qml  ZeraComponentsConfig.qml
libs/zeracomponents_lib/src/qml/ZeraComponents/: ZButton.qml  ZComboBox.qml  ZDoubleValidator.qml  ZLineEdit.qml  ZSpinBox.qml  ZUnitComboBox.qml  ZVisualComboBox.qml  qmldir
libs/zeracomponents_lib/src/qml/ZeraComponentsConfig/: ZeraComponentsConfig.qml  qmldir
modules/: modules.cmake
modules/advancednetworkmanager/: CMakeLists.txt  anmlib.qrc  anmlibConfig.cmake.in
modules/advancednetworkmanger_lib/: CMakeLists.txt  anmlib.qrc
modules/advancednetworkmanger_lib/src/: advancednetworkmanager.cpp  networkmanagerabstraction.cpp
modules/networksettings_module/: NETWORKMANAGER.md  plugin.qrc  plugins.qmltypes
networksettings_module/: CMakeLists.txt  NETWORKMANAGER.md  plugin.qrc  plugins.qmltypes  qmldir  vfnetworkmanagerConfig.cmake.in
networksettings_module/src/: vfnetworkmanager.cpp  vfnetworkmanager.h
networksettings_module/src/minimalGuiWrapper/: abstractnetworkwrapper.cpp  abstractnetworkwrapper.h  wifiwrapper.cpp  wifiwrapper.h  wiredwrapper.cpp  wiredwrapper.h
networksettings_module/src/qml/: MyQml.qml  QmlBackend.qml
networksettings_module/src/qml/ethernet/: EthernetTab.qml  IpDetType.qml  Ipv4Input.qml  Ipv6Input.qml
networksettings_module/src/qml/network/: ConnectButton.qml  ConnectedSymbol.qml  DeviceList.qml  UniversalMsgPopup.qml
networksettings_module/src/qml/wifi/: AvailableNetworks.qml  Networkname.qml  WifiTab.qml
notificationmanager/: notificationmanagerConfig.cmake.in
notificationmanager/src/qml/: Notification.qml  NotificationManager.qml
playground/: CMakeLists.txt  main.cpp
playground/qml/: Networksettings.qml  anmsettings.qml  app.qrc  main.qml  notifiManager.qml  uivectorgraph.qml  zeracomps.qml
uivectorgraphics_lib/: CMakeLists.txt
uivectorgraphics_lib/src/: uivectorgraphics.cpp  uivectorgraphics.h
uivectorgraphics_lib/src/view/: phasordiagram.cpp  phasordiagram.h
veinlibs/: veinlibs.cmake
veinlibs/zeraVeinComponents/: CMakeLists.txt  zeraveincomponents.qrc  zeraveincomponentsConfig.cmake.in
veinlibs/zeraVeinComponents/src/: zeraveincomponents.cpp  zeraveincomponents.h
veinlibs/zeraVeinComponents/src/qml/: VFComboBox.qml  VFLineEdit.qml  VFSpinBox.qml
veinlibs/zeraVeinComponents/src/qml/ZeraVeinComponents/: VFSpinBox.qml  VFSwitch.qml  qmldir
veinmodules/: veinmodules.cmake
zeracomponents_lib/: CMakeLists.txt
(+64 files in other folders)
